very initial structure

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,5 +2,11 @@ cmake_minimum_required(VERSION 3.30)
 project(ToDoSync)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_SOURCE_DIR src)
 
-add_executable(ToDoSync main.cpp)
+include_directories(include)
+
+add_executable(ToDoSync src/main.cpp
+        src/server/Server.cpp
+        src/server/Server.hpp
+        src/types.hpp)
