initial repository setup

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,4 +9,6 @@ include_directories(include)
 add_executable(ToDoSync src/main.cpp
         src/server/Server.cpp
         src/server/Server.hpp
-        src/types.hpp)
+        src/types.hpp
+        src/repository/Repository.cpp
+        src/repository/Repository.hpp)
