--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,6 +4,8 @@ project(ToDoSync)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_SOURCE_DIR src)
 
+add_compile_options(-Wall)
+
 include_directories(include)
 
 add_executable(ToDoSync src/main.cpp
