feat: :safety_vest: validation class to validate JSON payloads

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -19,4 +19,6 @@ add_executable(ToDoSync src/main.cpp
         src/repository/Repository.hpp
         src/operation_service/OperationService.cpp
         src/operation_service/OperationService.hpp
-        src/exceptions.hpp)
+        src/exceptions.hpp
+        src/validator/Validator.cpp
+        src/validator/Validator.hpp)
