--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -11,12 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoSync">
         <activity
+            android:name=".activities.TaskViewsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_task_views"
+            android:theme="@style/Theme.ToDoSync" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ToDoSync">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
