--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
             android:label="@string/title_activity_task_views"
             android:theme="@style/Theme.ToDoSync" />
         <activity
+            android:name=".activities.TasksActivity"
+            android:exported="false"
+            android:label="@string/title_activity_tasks"
+            android:theme="@style/Theme.ToDoSync" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
