--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoSync">
         <activity
-            android:name=".activities.TaskViewsActivity"
+            android:name=".activities.TaskListsActivity"
             android:exported="false"
             android:label="@string/title_activity_task_views"
             android:theme="@style/Theme.ToDoSync" />
