refactor: :bricks: project structure refactor

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,16 +9,8 @@ add_compile_options(-Wall)
 include_directories(include)
 
 add_executable(ToDoSync src/main.cpp
-        src/server/Server.cpp
-        src/server/Server.hpp
-        src/types.hpp
-        src/parser/Parser.cpp
-        src/parser/Parser.hpp
-        src/types.hpp
-        src/repository/Repository.cpp
-        src/repository/Repository.hpp
-        src/operation_service/OperationService.cpp
-        src/operation_service/OperationService.hpp
-        src/exceptions.hpp
-        src/validator/Validator.cpp
-        src/validator/Validator.hpp)
+        src/Server.cpp
+        src/Parser.cpp
+        src/Repository.cpp
+        src/OperationService.cpp
+        src/Validator.cpp)
